--- a/week2/gridcards/syle.css
+++ b/week2/gridcards/syle.css
@@ -2,7 +2,7 @@
  display: grid;
   grid-template-columns: repeat(3,350px);
   grid-column-gap: 2px;
-  grid-row-gapa: 25px;
+  grid-row-gap: 25px;
   
 }
 
